# chip8-emu-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/sdl2/: FindSDL2.cmake
docs/: Doxyfile
resources/: app_conf.json  roms.json
src/: CMakeLists.txt  app.cpp  app.hpp  beeper.cpp  beeper.hpp  conf.cpp  conf.hpp  emulator.cpp  emulator.hpp  main.cpp
src/chip8/: CMakeLists.txt  cpu.cpp  cpu.hpp  instructions.cpp  instructions.hpp
tests/: CMakeLists.txt  test.cpp
